--- a/FoldersApp/FoldersApp/MainWindow.xaml
+++ b/FoldersApp/FoldersApp/MainWindow.xaml
@@ -1,17 +1,32 @@
-﻿<Window x:Class="ListOfInstalledPrograms.MainWindow"
+﻿<Window x:Class="FoldersApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ListOfInstalledPrograms"
+        xmlns:local="clr-namespace:FoldersApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="1300" ResizeMode="NoResize">
+        Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition Height="50"/>
-        </Grid.RowDefinitions>
-        <ListView x:Name="progList"  Grid.Row="0">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="300"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <TreeView Grid.Column="0" x:Name="treeView">
+            <TreeView.ItemContainerStyle>
+                <Style TargetType="TreeViewItem">
+                    <EventSetter Event="MouseDoubleClick" Handler="Folder_MouseDoubleClick" />
+                </Style>
+            </TreeView.ItemContainerStyle>
+            <TreeView.ItemTemplate>
+                <HierarchicalDataTemplate ItemsSource="{Binding Path=Folders}">
+                    <StackPanel Margin="2" Orientation="Horizontal">
+                        <Image Source="{Binding ImageSource}" Width="16" Height="16" Stretch="Fill"/>
+                        <TextBlock Text="{Binding Name}" />
+                    </StackPanel>
+                </HierarchicalDataTemplate>
+            </TreeView.ItemTemplate>
+        </TreeView>
+        <ListView x:Name="fileList" Grid.Column="1" ItemsSource="{Binding SelectedItem.Files, ElementName=treeView}">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
                     <EventSetter Event="MouseDoubleClick" Handler="ListViewItem_MouseDoubleClick" />
@@ -32,27 +47,20 @@
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
-                        <GridViewColumn DisplayMemberBinding="{Binding DisplayName}"  Width="300">
+                        <GridViewColumn DisplayMemberBinding="{Binding Name}"  Width="350">
                             <GridViewColumn.Header>
-                                <GridViewColumnHeader Tag="DisplayName" Click="ListColumnHeader_Click">Name</GridViewColumnHeader>
+                                <GridViewColumnHeader Tag="Name" Click="ListColumnHeader_Click">Name</GridViewColumnHeader>
                             </GridViewColumn.Header>
                         </GridViewColumn>
-                        <GridViewColumn DisplayMemberBinding="{Binding UninstallString}"  Width="650">
+                        <GridViewColumn DisplayMemberBinding="{Binding Size}" Width="100">
                             <GridViewColumn.Header>
-                                <GridViewColumnHeader Tag="UninstallString">UninstallString</GridViewColumnHeader>
-                            </GridViewColumn.Header>
-                        </GridViewColumn>
-                        <GridViewColumn DisplayMemberBinding="{Binding Key}"  Width="250">
-                            <GridViewColumn.Header>
-                                <GridViewColumnHeader Tag="Key">Key</GridViewColumnHeader>
+                                <GridViewColumnHeader Tag="Size">Size</GridViewColumnHeader>
                             </GridViewColumn.Header>
                         </GridViewColumn>
                     </GridView.Columns>
                 </GridView>
             </ListView.View>
         </ListView>
-
-        <Button Grid.Row="1" Margin="10" Content="Update" Click="Update_Click" HorizontalAlignment="Center"/>
 
     </Grid>
 </Window>
