--- a/FoldersApp/FoldersApp/MainWindow.xaml
+++ b/FoldersApp/FoldersApp/MainWindow.xaml
@@ -15,12 +15,18 @@
             <TreeView.ItemContainerStyle>
                 <Style TargetType="TreeViewItem">
                     <EventSetter Event="MouseDoubleClick" Handler="Folder_MouseDoubleClick" />
+                    <EventSetter Event="Expanded" Handler="Folder_Expanded" />
                 </Style>
             </TreeView.ItemContainerStyle>
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate ItemsSource="{Binding Path=Folders}">
                     <StackPanel Margin="2" Orientation="Horizontal">
-                        <Image Source="{Binding ImageSource}" Width="16" Height="16" Stretch="Fill"/>
+                        <!--Image Source="pack://application:,,,/FoldersApp;/ico/FolderIcon.ico" Width="16" Height="16" Stretch="Fill"/-->
+                        <Image Margin="0,0,5,0" Width="16" Height="16" Stretch="Fill">
+                            <Image.Source>
+                                <BitmapImage UriSource="c:\Users\Lexa\Desktop\SmartGit\test\FoldersApp\FoldersApp\ico\FolderIcon2.ico" />
+                            </Image.Source>
+                        </Image>
                         <TextBlock Text="{Binding Name}" />
                     </StackPanel>
                 </HierarchicalDataTemplate>
