--- a/SQLiteForMovement/SQLiteForMovement/OperationWindow.xaml
+++ b/SQLiteForMovement/SQLiteForMovement/OperationWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="OperationWindow" Height="300" Width="400" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
+        Title="OperationWindow" Height="300" Width="400" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" Closing="Window_Closing">
     <Window.Resources>
         <Style TargetType="TextBlock">
             <Setter Property="Margin" Value="8" />
@@ -58,7 +58,7 @@
 
         <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Grid.Row="7" Grid.Column="1">
             <Button IsDefault="True" Click="Accept_Click" >OK</Button>
-            <Button IsCancel="True" >Отмена</Button>
+            <Button Name="CancelButton" Click="CancelButton_Click"  >Отмена</Button>
         </StackPanel>
     </Grid>
 </Window>
